feature: 데이터 구조 잡기 및 UI 작업

--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@emotion/styled": "^11.11.0",
+    "antd": "^5.13.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
