--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "@emotion/styled": "^11.11.0",
+    "@types/dompurify": "^3.0.5",
     "antd": "^5.13.3",
+    "dompurify": "^3.0.8",
     "localforage": "^1.10.0",
+    "marked": "^11.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3"
